<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/appbar_gradient_bg"
        >
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/activity_login.toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:title="@string/login_text"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_arrow_left_light"
            app:navigationIconTint="@color/white"
            app:titleTextAppearance="@style/TitleActionBar"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_login.next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button_color_state"
        app:srcCompat="@drawable/ic_arrow_right_regular"
        app:tint="@color/white"
        android:enabled="false"
        app:fabCustomSize="45dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?android:attr/actionBarSize"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Vui lòng nhập số điện thoại và mật khẩu để đăng nhập"
            android:textSize="12sp"
            android:textStyle="normal"
            android:background="@color/transparent_white_270"
            android:textColor="@color/black"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_login.text_input_number_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayoutAppearance"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:endIconMode="clear_text"
            android:hint="@string/number_phone_text"
            app:hintTextColor="@color/text_hint_color_state"
            app:counterMaxLength="10"
            app:boxStrokeWidth="1dp"
            app:boxStrokeColor="@color/primary_color"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:maxLength="10"
                android:inputType="number"
                android:textSize="17sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_login.text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayoutAppearance"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:endIconMode="password_toggle"
            android:hint="@string/password_text"
            app:hintTextColor="@color/text_hint_color_state"
            app:counterMaxLength="40"
            app:boxStrokeColor="@color/primary_color"
            app:boxStrokeWidth="1dp"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            app:passwordToggleEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:maxLength="40"
                android:inputType="textPassword"
                android:textSize="17sp"
                />
        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>