<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.SelectGenderAndBirthDateActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/appbar_gradient_bg"
        >
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/activity_select_gender_and_birth_date.toolbar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:title="@string/birthdate_gender_text"
            app:titleTextColor="@color/white"
            app:titleTextAppearance="@style/TitleActionBar"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_select_gender_and_birth_date.next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button_color_state"
        app:srcCompat="@drawable/ic_arrow_right_regular"
        app:tint="@color/white"
        android:enabled="false"
        app:fabCustomSize="45dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hãy chọn ngày sinh và giới tính của bạn"
            android:textSize="12sp"
            android:textStyle="normal"
            android:background="@color/transparent_white_270"
            android:textColor="@color/black"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender_text"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="13sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingTop="10dp"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    >
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        >
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_male_bg"
                            android:layout_marginLeft="35dp"
                            />
                        <CheckBox
                            android:id="@+id/male_check_box"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/CustomCheckbox"
                            android:layout_gravity="center|bottom"
                            android:minHeight="0dp"
                            android:minWidth="0dp"
                            android:layout_marginLeft="17dp"

                            />

                    </FrameLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Nam"
                        android:layout_marginLeft="35dp"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    >
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        >
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginRight="35dp"
                            android:src="@drawable/ic_female_bg"
                            />
                        <CheckBox
                            android:id="@+id/female_check_box"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/CustomCheckbox"
                            android:layout_gravity="center|bottom"
                            android:minHeight="0dp"
                            android:minWidth="0dp"
                            android:layout_marginRight="17dp"

                            />

                    </FrameLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Nữ"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:layout_marginRight="35dp"
                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/transparent_white_270"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birthdate_text"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingTop="12dp"
            android:paddingLeft="10dp"
            />
        <DatePicker
            android:id="@+id/birthdate_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:theme="@style/MyAppTheme.DatePicker"
            />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>